# grocery_deals

./: CLAUDE.md  README.md  grocery_deals.py  grocery_deals_mcp.py  main.py  pyproject.toml
tests/: test_grocery_deals.py
